--- a/UcasProjectManagement/UcasProWindowsForm/Reports/rptSupplier.rdlc
+++ b/UcasProjectManagement/UcasProWindowsForm/Reports/rptSupplier.rdlc
@@ -402,7 +402,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!SupplierID.Value</Value>
+                              <Value>=RowNumber(Nothing)</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -724,7 +724,7 @@
         <Top>1.9812cm</Top>
         <Left>0.02646cm</Left>
         <Height>1.2cm</Height>
-        <Width>19.85162cm</Width>
+        <Width>19.85161cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -752,7 +752,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox25</rd:DefaultName>
         <Top>0.41438cm</Top>
-        <Left>5.46112cm</Left>
+        <Left>4.72029cm</Left>
         <Height>0.9175cm</Height>
         <Width>9.72313cm</Width>
         <ZIndex>1</ZIndex>
@@ -760,7 +760,7 @@
           <Border>
             <Style>None</Style>
           </Border>
-          <BackgroundColor>LightGrey</BackgroundColor>
+          <BackgroundColor>WhiteSmoke</BackgroundColor>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
