--- a/UcasProjectManagement/UcasProWindowsForm/Reports/rptProject.rdlc
+++ b/UcasProjectManagement/UcasProWindowsForm/Reports/rptProject.rdlc
@@ -1013,7 +1013,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
+                              <Value>=RowNumber(Nothing)</Value>
                               <Style>
                                 <FontSize>11pt</FontSize>
                               </Style>
@@ -1047,6 +1047,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
